Random Forest/DNA/MICROSET_PRUEBA/ERROR_OUTPUT/pyrandom_forgraph_output.477979.out
  File "RandomForest_addhist_logimp.py", line 233
    histom=f"histograma_mlabels_{img+1}.png"
                                           ^
SyntaxError: invalid syntax
